[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mymockllm"
version = "0.1.0"
description = "A manual LLM mock server for testing agentic workflows."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sse-starlette>=1.8.0"
]

[tool.uv]
package = false
